--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
 
 a {
   color: currentColor;
-  text-decoration: none;
 }
 
 a:hover,
@@ -224,6 +223,15 @@ details summary::marker {
   margin: 2rem;
   display: flex;
   flex-direction: column;
+}
+
+.team-area a {
+  text-decoration: none;
+}
+
+.team-area a:hover,
+.team-area a:focus {
+  text-decoration: underline;
 }
 
 .team-member {
