--- a/augminted-ui/src/n0x-concept/n0x.css
+++ b/augminted-ui/src/n0x-concept/n0x.css
@@ -17,83 +17,7 @@
     }
   }
   
-  .stage {
-    display: flex;
-    justify-content: center;
-    padding: 2rem;
-    border: 1px solid whitesmoke;
-  }
-  
-  .ball {
-    display: inline-block;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    position: relative;
-  }
-  
-  .ball-texture {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-  }
-  
-  .ball-texture-back {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-  }
-  
-  @media (min-width: 640px) {
-    .ball {
-      width: 500px;
-      height: 500px;
-    }
-  
-    .ball-texture {
-      width: 500px;
-      height: 500px;
-    }
-  
-    .ball-texture-back {
-      position: absolute;
-      width: 500px;
-      height: 500px;
-    }
-  }
-  
-  .answer-surface {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .answer {
-    color: white;
-    font-variant: small-caps;
-    text-align: center;
-    border-radius: 100%;
-    width: 102px;
-    height: 102px;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-  }
-  
-  @media (min-width: 640px) {
-    .answer {
-      font-size: 1.2rem;
-      width: 202px;
-      height: 202px;
-    }
-  }
-  
-  .form {
+  .concept-form {
     font-family: "miedinger";
     font-size: x-large;
     font-style: italic;
