--- a/augminted-ui/src/App.css
+++ b/augminted-ui/src/App.css
@@ -15,7 +15,7 @@
   --size-200: 0.75rem;
   --size-300: 1rem;
   --size-400: 1.25rem;
-  --header-height: 9rem;
+  --header-height: 8.5rem;
 }
 
 @media (min-width: 1024px) {
@@ -47,6 +47,7 @@ body {
   background-color: black;
   margin: 0;
   height: 100%;
+  overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -150,13 +151,14 @@ p + p {
   position: sticky;
   top: 0;
   height: var(--header-height);
-  font-size: var(--font-size-big);
+  font-size: 20pt;
 }
 
 @media (min-width: 1024px) {
   .header {
     flex-direction: row;
     justify-content: center;
+    font-size: var(--font-size-big);
     gap: 2rem;
   }
 }
@@ -290,9 +292,15 @@ details summary::marker {
 }
 
 .content-area {
-  display: none;
+  display: flex;
   justify-content: center;
-  padding: 6rem;
+  padding: 2rem;
+}
+
+@media (min-width: 1024px) {
+  .content-area {
+    padding: 6rem;
+  }
 }
 
 .content-area-open {
