--- a/augminted-ui/src/n0x-concept/n0x.css
+++ b/augminted-ui/src/n0x-concept/n0x.css
@@ -11,7 +11,7 @@
 }
 
 .concept-form {
-  font-family: "miedinger";
+  font-family: "miedinger-light";
   font-size: x-large;
   font-style: italic;
   display: flex;
