--- a/augminted-ui/src/util-styles.css
+++ b/augminted-ui/src/util-styles.css
@@ -114,6 +114,10 @@ p + p {
   background-color: var(--color-blue);
 }
 
+.bg-darkgrey {
+  background-color: var(--color-darkgrey);
+}
+
 .black {
   color: var(--color-black);
 }
